[fix] unit tests

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:crypto": "react-scripts test --testPathPattern=crypto",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
