--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # Set the base path for GitHub Pages (replace 'key-wizard' with your repo name)
-          PUBLIC_URL: /key-wizard
+          # Set the base path for GitHub Pages
+          PUBLIC_URL: /crypto-forge
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
